--- a/crm-frontend/index.html
+++ b/crm-frontend/index.html
@@ -48,6 +48,8 @@
             </div>
             <div id="modalChange" class="modalDelete">
             </div>
+            <form id="form__change" class="form__change">
+            </form>
         </div>
     </main>
 </body>
