--- a/crm-frontend/index.html
+++ b/crm-frontend/index.html
@@ -21,7 +21,7 @@
                 </svg>
             </div>
             <div class="header__search">
-                <form>
+                <form id="header__form">
                     <input type="text" class="search__input" id="search" placeholder="Введите запрос">
                 </form>
             </div>
